--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-is": "^19.2.3",
+    "react-resizable-panels": "^4.4.1",
     "react-router-dom": "^7.12.0",
     "recharts": "^3.6.0",
     "resend": "^6.7.0",
