--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio-aplication",
   "version": "0.1.0",
   "private": true,
-
   "packageManager": "pnpm@10.24.0",
   "scripts": {
     "dev": "next dev",
@@ -11,6 +10,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
