--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-aplication",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@10.24.0",
+  "packageManager": "bun@1.1.38",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^25.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-router-dom": "^5.3.3",
